--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Welcome to my Webpage</h1>
 
-    <a href="/others/about.html">Learn more about us</a>
+    <a href="./others/about.html">Learn more about us</a>
     <br>
     <br>
-    <a href="/others/blog.html">Visit our blog</a>
+    <a href="./others/blog.html" id="">Visit our blog</a>
     <br>
     <br>
-    <a href="/others/contact.html">Get in touch with us</a>
+    <a href="./others/contact.html">Get in touch with us</a>
     <br>
     <br>
     <hr color="black" size="2">
